[gd_scene load_steps=3 format=3 uid="uid://c4jict8rabxid"]

[ext_resource type="Script" path="res://scenes/player_color_picker.gd" id="1_eok0q"]
[ext_resource type="Texture2D" uid="uid://bxyy3bwt7a5l2" path="res://sprites/circle.svg" id="1_jbrnv"]

[node name="PlayerColorPicker" type="PanelContainer"]
script = ExtResource("1_eok0q")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PaddingStart" type="Control" parent="Layout"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Layout"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b]Personalizza la tua pallina[/b][/center]"
fit_content = true

[node name="ColorPicker" type="ColorPicker" parent="Layout"]
layout_mode = 2
color = Color(1, 0.996078, 0, 1)
picker_shape = 1
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="PreviewContainer" type="Control" parent="Layout"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="PreviewTexture" type="TextureRect" parent="Layout/PreviewContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.125, 0.125)
pivot_offset = Vector2(64, 64)
texture = ExtResource("1_jbrnv")

[node name="PaddingEnd" type="Control" parent="Layout"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Button" type="Button" parent="Layout"]
layout_mode = 2
text = "Conferma"

[connection signal="color_changed" from="Layout/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="Layout/Button" to="." method="_on_button_pressed"]
